# atlys-de-assignment

./: .gitignore  README.md  config.py  daily_stock_data_dump.py  fetch_historical_data.py  historical_stock_data.csv  pyproject.toml  queries.sql  stock_data_utils.py  stock_market_db.sql  test.py
app/: fetch_historical_data.py  stock_data_utils.py
